--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -9,6 +9,9 @@
             <trans-unit id="allLocallangs">
                 <source>All locallang.xlf files</source>
             </trans-unit>
+			<trans-unit id="useCategorization">
+				<source>Use categorization inside edit mode</source>
+			</trans-unit>
         </body>
     </file>
 </xliff>
