Integrated basic export init of database row

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -24,6 +24,9 @@
             <trans-unit id="flashMessages.noDataToImport">
                 <source>No Data to import</source>
             </trans-unit>
+            <trans-unit id="exportTableRow.headlineExport">
+                <source>Export</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
