Added support for ContentBlocks

--- a/Documentation/Changelog/2.0.0.md
+++ b/Documentation/Changelog/2.0.0.md
@@ -2,3 +2,4 @@
 Support of TYPO3 13
 ## New Features
 - Automatic Translation Backup and Restore.
+- Support of Content Blocks when auto-synchronize all locallang files. (Settings option - All locallang.xlf files - is checked)
