Update of notes possibilities

--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -18,6 +18,9 @@
             <trans-unit id="export.field.label">
                 <source>Label</source>
             </trans-unit>
+            <trans-unit id="export.field.maxLength">
+                <source>Max length</source>
+            </trans-unit>
             <trans-unit id="export.field.isSlug">
                 <source>This field is SLUG. Use only lowercase letters, numbers or "/-", no spaces or other special characters.</source>
             </trans-unit>
